# lostpaw-transformer

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  pyproject.toml
data-scraper/aap-scraper/: Cargo.toml
data-scraper/aap-scraper/src/: lib.rs
lostpaw/: __init__.py
lostpaw/config/: __init__.py  args.py  config.py
lostpaw/configs/: container.yaml  default.yaml  sweep.yaml
lostpaw/data/: __init__.py  auto_augment.py  data_folder.py  dataset.py  extract_pets.py
lostpaw/model/: __init__.py  loss.py  model.py  trainer.py
metrics/: ablation_study_metrics.csv  final_held_out_metrics.csv  final_metrics.csv
scripts/: clean_dataset.py  concat_images.py  extract_pets.py  extract_pets_merge.py  inference_server.py  plot_test_scores.py  sweep.py  test.py  train.py  visualize_data.py
webapp/: run.sh
webapp/backend/: Cargo.toml
webapp/backend/src/: geojson.rs  login.rs  main.rs  ml.py  ml.rs  pets.rs
webapp/deploy/: database-mongo.yaml  dev-container.yaml  queue.yaml
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
webapp/frontend/src/: App.vue  main.ts  router.ts
webapp/frontend/src/assets/: base.css
webapp/frontend/src/components/: Alert.vue  FoundPetButton.vue  ImageUpload.vue  Nav.vue  OpenMap.vue  PetResults.vue  Popup.vue  index.ts
webapp/frontend/src/stores/: alert.ts  index.ts  map.ts  pet.ts  user.ts
webapp/frontend/src/views/: LoginConfirmView.vue  LoginView.vue  MapView.vue  MissingPetView.vue  PetsView.vue
